--- a/configuration.yaml
+++ b/configuration.yaml
@@ -53,10 +53,10 @@ sonoff:
   password: !secret ewelink_password
   
 tuya: 
-  username: !secret smartlife_username
-  password: !secret smartlife_password
+  username: !secret tuya_username
+  password: !secret tuya_password
   country_code: '44'
-  platform: 'smart_life'
+  platform: 'tuya'
   
 binary_sensor:
   - platform: template
