Fixed: Light names Added: Light in 2nd bedroom Removed: Room groups imported from Hue (the individual lights were already present)

--- a/groups.yaml
+++ b/groups.yaml
@@ -1,10 +1,3 @@
-all_the_things:
-  name: All lights and switches
-  entities:
-    - group.all_lights
-    - switch.sonoff_10001f5fa0
-    - switch.christmas_star
-
 all_persons:
   name: All Persons
   entities:
@@ -14,21 +7,18 @@ all_persons:
 all_my_lights:
   name: All My Lights
   entities: 
-    -  light.advent
+    - light.advent
     - light.bloom
-    - light.extended_color_light_1
+    - light.dimmable_light_1
+    - light.extended_color_light_1_2
     - light.hall
     - light.lightstick
     - light.lightstick_2
     - light.lightstrip
-    - light.living_room
+    - light.living_room_1
     - light.living_room_2
     - light.main_bedroom
-    - light.our_bedroom
     - light.reuben_s_bedroom
-    - light.reuben_s_room
     - light.seb_s_colour
-    - light.sebastian_s_bedroom
-    - light.sebastian_s_bedroom_2
     - light.wled_light
-    - light.xmas    
+    - light.xmas
