--- a/customize.yaml
+++ b/customize.yaml
@@ -12,7 +12,7 @@ sensor.tradfri_blind:
   
 sensor.bed1_temperature:
   friendly_name: Master bedroom
-sensor.bed1_humidity_2:  
+sensor.bed1_humidity:  
   friendly_name: Master bedroom
 sensor.white_temperature_2:
   friendly_name: Kitchen
@@ -37,7 +37,7 @@ sensor.bathroom_humidity:
 sensor.ensuite_humidity:
   friendly_name: Ensuite
 sensor.ensuite_temperature:
-  friendly_name: Enuite
+  friendly_name: Ensuite
 sensor.hallway_motion_sensor_temperature: 
   friendly_name: Hall
 
@@ -52,6 +52,8 @@ binary_sensor.kitchen_motion_sensor:
 
 sensor.tradfri_open_close_remote:
   icon: mdi:remote
+light.living_room:
+  icon: mdi:floor-lamp-dual
 light.living_room_1:
   icon: mdi:floor-lamp
 light.living_room_2:
@@ -59,6 +61,8 @@ light.living_room_2:
 light.bloom:
   icon: mdi:desk-lamp
 light.main_bedroom:
+  icon: mdi:ceiling-light
+light.second_bedroom:
   icon: mdi:ceiling-light
 light.seb_s_colour:
   icon: mdi:ceiling-light
