--- a/esphome/sensor_d1mini_dht22_green.yaml
+++ b/esphome/sensor_d1mini_dht22_green.yaml
@@ -6,7 +6,7 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  domain: ".home"
+  domain: ".lan"
 
 # Enable logging
 logger:
@@ -27,5 +27,5 @@ sensor:
       name: "Living Room Humidity"
   - platform: adc
     pin: VCC
-    name: "Bed1 Voltage"
+    name: "Living Room Voltage"
     update_interval: 600s
