--- a/esphome/sensor_esp01_dht22_bed1.yaml
+++ b/esphome/sensor_esp01_dht22_bed1.yaml
@@ -6,7 +6,7 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  domain: ".home"
+  domain: ".lan"
 
 # Enable logging
 logger:
